adding different scoring for regression problems

--- a/archive/classifier_template.ipynb
+++ b/archive/classifier_template.ipynb
@@ -482,7 +482,7 @@
     "\n",
     "### [^](#toc) Many model evaluation\n",
     "\n",
-    "This just gives an idea of what model will be the best performer.  However, this appears to be too computationally expensive for this amount of data.  If I had more time I would split up the data into smaller chunks, then evaluate this."
+    "This just gives an idea of what model will be the best performer."
    ]
   },
   {
