--- a/archive/regession_template.ipynb
+++ b/archive/regession_template.ipynb
@@ -458,7 +458,7 @@
     "from sklearn.preprocessing import RobustScaler\n",
     "from sklearn.base import BaseEstimator, TransformerMixin, RegressorMixin, clone\n",
     "from sklearn.model_selection import KFold, cross_val_score, train_test_split\n",
-    "from sklearn.metrics import mean_squared_error\n",
+    "from sklearn.metrics import mean_squared_error, roc_curve, auc\n",
     "import xgboost as xgb\n",
     "import lightgbm as lgb\n",
     "\n",
@@ -471,7 +471,13 @@
     "    score = cross_val_score(model, train_x, train_y, cv=kfold, n_jobs=1, scoring=\"accuracy\")\n",
     "    print(score)\n",
     "    print(\"\\nAverage is ...\")\n",
-    "    print(sum(score) / len(score))"
+    "    print(sum(score) / len(score))\n",
+    "    \n",
+    "### AUC metric\n",
+    "def auc_score(actual, predictions):\n",
+    "    fpr, tpr, thresholds = roc_curve(actual, predictions, pos_label=2)\n",
+    "    score = auc(fpr, tpr)\n",
+    "    print(score)"
    ]
   },
   {
@@ -482,7 +488,7 @@
     "\n",
     "### [^](#toc) Many model evaluation\n",
     "\n",
-    "This just gives an idea of what model will be the best performer.  However, this appears to be too computationally expensive for this amount of data.  If I had more time I would split up the data into smaller chunks, then evaluate this."
+    "This just gives an idea of what model will be the best performer."
    ]
   },
   {
@@ -548,407 +554,73 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<a id=\"ada_model\"></a>\n",
-    "\n",
-    "### [^](#toc) Ada Boost Classifier"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": [
-    "ada_model = AdaBoostClassifier(\n",
-    "                    DecisionTreeClassifier(random_state = 17),\n",
-    "                    random_state = 17, learning_rate = 0.1\n",
-    "                )\n",
-    "\n",
-    "### Training\n",
-    "start = time.time()\n",
-    "ada_model.fit(train_x, train_y)\n",
-    "print(\"Training took {} seconds\".format(round(time.time() - start)))\n",
-    "\n",
-    "### Scoring\n",
-    "start = time.time()\n",
-    "score_model(ada_model)\n",
-    "print(\"\\nScoring took {} seconds\".format(round(time.time() - start)))"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "<a id=\"dtc_model\"></a>\n",
-    "\n",
-    "### [^](#toc) Deciscion Tree Classifier"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": [
-    "dtc_model = DecisionTreeClassifier(random_state = 17)\n",
-    "\n",
-    "### Training\n",
-    "start = time.time()\n",
-    "dtc_model.fit(train_x, train_y)\n",
-    "print(\"Training took {} seconds\".format(round(time.time() - start)))\n",
-    "\n",
-    "### Scoring\n",
-    "start = time.time()\n",
-    "score_model(dtc_model)\n",
-    "print(\"\\nScoring took {} seconds\".format(round(time.time() - start)))"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "<a id=\"etc_model\"></a>\n",
-    "\n",
-    "### [^](#toc) Extra Trees Classifer"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": [
-    "etc_model = ExtraTreesClassifier(random_state = 17)\n",
-    "\n",
-    "### Training\n",
-    "start = time.time()\n",
-    "etc_model.fit(train_x, train_y)\n",
-    "print(\"Training took {} seconds\".format(round(time.time() - start)))\n",
-    "\n",
-    "### Scoring\n",
-    "start = time.time()\n",
-    "score_model(etc_model)\n",
-    "print(\"\\nScoring took {} seconds\".format(round(time.time() - start)))"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "<a id=\"gbc_model\"></a>\n",
-    "\n",
-    "### [^](#toc) Gradient Boosting Classifier"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": [
-    "gbc_model = GradientBoostingClassifier(random_state=17)\n",
-    "\n",
-    "### Training\n",
-    "start = time.time()\n",
-    "gbc_model.fit(train_x, train_y)\n",
-    "print(\"Training took {} seconds\".format(round(time.time() - start)))\n",
-    "\n",
-    "### Scoring\n",
-    "start = time.time()\n",
-    "score_model(gbc_model)\n",
-    "print(\"\\nScoring took {} seconds\".format(round(time.time() - start)))"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "<a id=\"knn_model\"></a>\n",
-    "\n",
-    "### [^](#toc) K Nearest Neighbors"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": [
-    "knn_model = KNeighborsClassifier()\n",
-    "\n",
-    "### Training\n",
-    "start = time.time()\n",
-    "knn_model.fit(train_x, train_y)\n",
-    "print(\"Training took {} seconds\".format(round(time.time() - start)))\n",
-    "\n",
-    "### Scoring\n",
-    "start = time.time()\n",
-    "score_model(knn_model)\n",
-    "print(\"\\nScoring took {} seconds\".format(round(time.time() - start)))"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
     "<a id=\"lgb_model\"></a>\n",
     "\n",
-    "### [^](#toc) Light Gradient Boost"
+    "### [^](#toc) Light Gradient Boost\n",
+    "\n",
+    "\n",
+    "#### Grid Search"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "metadata": {
     "collapsed": true
    },
    "outputs": [],
    "source": [
-    "lgb_model = LGBMClassifier()\n",
+    "## Search grid for optimal parameters\n",
+    "lgb_param_grid = {\n",
+    "                    \"n_estimators\": [110, 120, 130],\n",
+    "                    \"base_estimator__max_depth\": [None, 3],\n",
+    "                 }\n",
+    "\n",
+    "LGB = AdaBoostClassifier(base_estimator=DTC, learning_rate=0.08)\n",
+    "\n",
+    "gsLGB = GridSearchCV(LGB, param_grid=lgb_param_grid, cv=kfold, scoring=\"accuracy\", verbose=1)\n",
+    "\n",
+    "start = time.time()\n",
+    "gsLGB.fit(train_x, train_y)\n",
+    "print(\"Training took {} seconds\".format(round(time.time() - start)))\n",
+    "\n",
+    "# Best score\n",
+    "print(gsLGB.best_score_)\n",
+    "print(gsLGB.best_params_)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Modeling"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "training_x, val_x, training_y, val_y = train_test_split(train_x, train_y, test_size=0.2, random_state=17)\n",
+    "lgb_train = lgb.Dataset(data=training_x, label=training_y)\n",
+    "lgb_eval  = lgb.Dataset(data=val_x, label=val_y)\n",
+    "\n",
+    "params = {'task': 'train', 'boosting_type': 'gbdt', 'objective': 'binary', 'metric': 'auc', \n",
+    "          'learning_rate': 0.01, 'num_leaves': 48, 'num_iteration': 5000, 'verbose': 0 ,\n",
+    "          'colsample_bytree':.8, 'subsample':.9, 'max_depth':7, 'reg_alpha':.1, 'reg_lambda':.1, \n",
+    "          'min_split_gain':.01, 'min_child_weight':1}\n",
     "\n",
     "### Training\n",
     "start = time.time()\n",
-    "lgb_model.fit(train_x, train_y)\n",
-    "print(\"Training took {} seconds\".format(round(time.time() - start)))\n",
+    "lgb_model = lgb.train(params, lgb_train, valid_sets=lgb_eval, early_stopping_rounds=150, verbose_eval=200)\n",
+    "print(\"\\nTraining took {} seconds\".format(round(time.time() - start)))\n",
     "\n",
     "### Scoring\n",
     "start = time.time()\n",
     "score_model(lgb_model)\n",
-    "print(\"\\nScoring took {} seconds\".format(round(time.time() - start)))"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "<a id=\"lin_model\"></a>\n",
-    "\n",
-    "### [^](#toc) Linear Discriminant Analysis"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 1,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": [
-    "lin_model = LinearDiscriminantAnalysis()\n",
-    "\n",
-    "### Training\n",
-    "start = time.time()\n",
-    "lin_model.fit(train_x, train_y)\n",
-    "print(\"Training took {} seconds\".format(round(time.time() - start)))\n",
-    "\n",
-    "### Scoring\n",
-    "start = time.time()\n",
-    "score_model(lin_model)\n",
-    "print(\"\\nScoring took {} seconds\".format(round(time.time() - start)))"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "<a id=\"log_model\"></a>\n",
-    "\n",
-    "### [^](#toc) Logistic"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": [
-    "log_model = LogisticRegression(random_state = 17)\n",
-    "\n",
-    "### Training\n",
-    "start = time.time()\n",
-    "log_model.fit(train_x, train_y)\n",
-    "print(\"Training took {} seconds\".format(round(time.time() - start)))\n",
-    "\n",
-    "### Scoring\n",
-    "start = time.time()\n",
-    "score_model(log_model)\n",
-    "print(\"\\nScoring took {} seconds\".format(round(time.time() - start)))"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "<a id=\"mlp_model\"></a>\n",
-    "\n",
-    "### [^](#toc) Multiple Layer Perceptron"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": [
-    "mlp_model = MLPClassifier(random_state = 17)\n",
-    "\n",
-    "### Training\n",
-    "start = time.time()\n",
-    "mlp_model.fit(train_x, train_y)\n",
-    "print(\"Training took {} seconds\".format(round(time.time() - start)))\n",
-    "\n",
-    "### Scoring\n",
-    "start = time.time()\n",
-    "mlp_model(lin_model)\n",
-    "print(\"\\nScoring took {} seconds\".format(round(time.time() - start)))"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "<a id=\"rfc_model\"></a>\n",
-    "\n",
-    "### [^](#toc) Random Forest Classifier"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": [
-    "rfc_model = RandomForestClassifier(random_state = 17)\n",
-    "\n",
-    "### Training\n",
-    "start = time.time()\n",
-    "rfc_model.fit(train_x, train_y)\n",
-    "print(\"Training took {} seconds\".format(round(time.time() - start)))\n",
-    "\n",
-    "### Scoring\n",
-    "start = time.time()\n",
-    "score_model(rfc_model)\n",
-    "print(\"\\nScoring took {} seconds\".format(round(time.time() - start)))"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "<a id=\"svc_model\"></a>\n",
-    "\n",
-    "### [^](#toc) SVC"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": [
-    "svc_model = SVC()\n",
-    "\n",
-    "### Training\n",
-    "start = time.time()\n",
-    "svc_model.fit(train_x, train_y)\n",
-    "print(\"Training took {} seconds\".format(round(time.time() - start)))\n",
-    "\n",
-    "### Scoring\n",
-    "start = time.time()\n",
-    "score_model(svc_model)\n",
-    "print(\"\\nScoring took {} seconds\".format(round(time.time() - start)))"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "<a id=\"xgb_model\"></a>\n",
-    "\n",
-    "### [^](#toc) XGB Classifier"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": [
-    "xgb_model = XGBClassifier()\n",
-    "\n",
-    "### Training\n",
-    "start = time.time()\n",
-    "xgb_model.fit(train_x, train_y)\n",
-    "print(\"Training took {} seconds\".format(round(time.time() - start)))\n",
-    "\n",
-    "### Scoring\n",
-    "start = time.time()\n",
-    "score_model(xgb_model)\n",
-    "print(\"\\nScoring took {} seconds\".format(round(time.time() - start)))"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "<a id=\"vote\"></a>\n",
-    "\n",
-    "### [^](#toc) Voting classifier"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": [
-    "print(\"Building...\")\n",
-    "final_model = VotingClassifier(estimators=[\n",
-    "                                        (\"ADA\", ada_model),\n",
-    "                                        (\"DTC\", dtc_model),\n",
-    "                                        (\"ETC\", etc_model),\n",
-    "                                        (\"GBC\", gbc_model),\n",
-    "                                        (\"KNN\", knn_model),\n",
-    "                                        (\"LGB\", lgb_model),\n",
-    "                                        (\"LIN\", lin_model),\n",
-    "                                        (\"LOG\", log_model),\n",
-    "                                        (\"MLP\", mlp_model),\n",
-    "                                        (\"RFC\", rfc_model),\n",
-    "                                        (\"SVC\", svc_model),\n",
-    "                                        (\"XGB\", xgb_model)\n",
-    "                                      ], voting='soft')\n",
-    "print(\"Built.\")\n",
-    "\n",
-    "### Training\n",
-    "start = time.time()\n",
-    "final_model.fit(train_x, train_y)\n",
-    "print(\"Training took {} seconds\".format(round(time.time() - start)))\n",
-    "\n",
-    "### Scoring\n",
-    "start = time.time()\n",
-    "score_model(final_model)\n",
     "print(\"\\nScoring took {} seconds\".format(round(time.time() - start)))"
    ]
   },
@@ -961,7 +633,7 @@
     "\n",
     "# [^](#toc) <u>Feature Importance</u>\n",
     "\n",
-    "Runs an Extra Trees Classifier on a sample of the data and determines the data's most important features."
+    "Runs an Light Gradient Booster on a sample of the data and determines the data's most important features."
    ]
   },
   {
