--- a/in_progress/semiconductors/1_good_beginnings.ipynb
+++ b/in_progress/semiconductors/1_good_beginnings.ipynb
@@ -978,7 +978,10 @@
     "    score = cross_val_score(model, train_x, train_y, cv=kfold, n_jobs=1, scoring=\"accuracy\")\n",
     "    print(score)\n",
     "    print(\"\\nAverage is ...\")\n",
-    "    print(sum(score) / len(score))"
+    "    print(sum(score) / len(score))\n",
+    "    \n",
+    "def rmsle(y, y_pred):\n",
+    "    return np.sqrt(mean_squared_error(y, y_pred))"
    ]
   },
   {
