more models for regression template

--- a/archive/regession_template.ipynb
+++ b/archive/regession_template.ipynb
@@ -22,19 +22,6 @@
     "7.) [Modeling](#model)  \n",
     "&nbsp;&nbsp;&nbsp;&nbsp; 7.1.) [Machine learning imports](#ml_imports)  \n",
     "&nbsp;&nbsp;&nbsp;&nbsp; 7.2.) [Many model evaluation](#model_eval)  \n",
-    "&nbsp;&nbsp;&nbsp;&nbsp; 7.3.) [Ada Boost](#ada_model)  \n",
-    "&nbsp;&nbsp;&nbsp;&nbsp; 7.4.) [Decision Tree](#dtc_model)  \n",
-    "&nbsp;&nbsp;&nbsp;&nbsp; 7.5.) [Extra Trees](#etc_model)  \n",
-    "&nbsp;&nbsp;&nbsp;&nbsp; 7.6.) [Gradient Boost](#gbc_model)  \n",
-    "&nbsp;&nbsp;&nbsp;&nbsp; 7.7.) [K Nearest Neighbors](#knn_model)  \n",
-    "&nbsp;&nbsp;&nbsp;&nbsp; 7.8.) [Light Gradient Boost](#lgb_model)  \n",
-    "&nbsp;&nbsp;&nbsp;&nbsp; 7.9.) [Linear Discriminant Analysis](#lin_model)  \n",
-    "&nbsp;&nbsp;&nbsp;&nbsp; 7.10.) [Logistic](#log_model)  \n",
-    "&nbsp;&nbsp;&nbsp;&nbsp; 7.11.) [Multiple Layer Perceptron](#mlp_model)  \n",
-    "&nbsp;&nbsp;&nbsp;&nbsp; 7.12.) [Random Forest Classifier](#rfc_model)  \n",
-    "&nbsp;&nbsp;&nbsp;&nbsp; 7.13.) [SVC](#svc_model)  \n",
-    "&nbsp;&nbsp;&nbsp;&nbsp; 7.14.) [XGB Classifier](#xgb_model)  \n",
-    "&nbsp;&nbsp;&nbsp;&nbsp; 7.15.) [Voting classifier](#vote)  \n",
     "8.) [Feature Importance](#feat_importance)  "
    ]
   },
@@ -440,7 +427,17 @@
    "source": [
     "<a id=\"ml_imports\"></a>\n",
     "\n",
-    "### [^](#toc) Machine learning imports"
+    "### [^](#toc) Machine learning imports\n",
+    "\n",
+    "(Click here for different scoring metrics)\n",
+    "\n",
+    "<div hidden>\n",
+    "\n",
+    "Different options for the `scoring` variable in `cross_val_score`\n",
+    "\n",
+    "'accuracy', 'adjusted_mutual_info_score', 'adjusted_rand_score', 'average_precision', 'completeness_score', 'explained_variance', 'f1', 'f1_macro', 'f1_micro', 'f1_samples', 'f1_weighted', 'fowlkes_mallows_score', 'homogeneity_score', 'mutual_info_score', 'neg_log_loss', 'neg_mean_absolute_error', 'neg_mean_squared_error', 'neg_mean_squared_log_error', 'neg_median_absolute_error', 'normalized_mutual_info_score', 'precision', 'precision_macro', 'precision_micro', 'precision_samples', 'precision_weighted', 'r2', 'recall', 'recall_macro', 'recall_micro', 'recall_samples', 'recall_weighted', 'roc_auc', 'v_measure_score'\n",
+    "\n",
+    "</div>"
    ]
   },
   {
@@ -451,33 +448,34 @@
    },
    "outputs": [],
    "source": [
-    "from sklearn.linear_model import ElasticNet, Lasso,  BayesianRidge, LassoLarsIC\n",
-    "from sklearn.ensemble import RandomForestRegressor,  GradientBoostingRegressor\n",
+    "from sklearn.linear_model import ElasticNet, Lasso, BayesianRidge, LassoLarsIC, LinearRegression\n",
+    "from sklearn.ensemble import RandomForestRegressor, GradientBoostingRegressor\n",
     "from sklearn.kernel_ridge import KernelRidge\n",
     "from sklearn.pipeline import make_pipeline\n",
     "from sklearn.preprocessing import RobustScaler\n",
     "from sklearn.base import BaseEstimator, TransformerMixin, RegressorMixin, clone\n",
     "from sklearn.model_selection import KFold, cross_val_score, train_test_split\n",
     "from sklearn.metrics import mean_squared_error, roc_curve, auc\n",
+    "from sklearn.svm import SVR\n",
     "import xgboost as xgb\n",
     "import lightgbm as lgb\n",
     "\n",
     "from xgboost import XGBRegressor\n",
     "from lightgbm import LGBMRegressor\n",
     "\n",
-    "kfold = StratifiedKFold()\n",
+    "n_folds = 5\n",
     "\n",
-    "def score_model(model):\n",
-    "    score = cross_val_score(model, train_x, train_y, cv=kfold, n_jobs=1, scoring=\"accuracy\")\n",
-    "    print(score)\n",
-    "    print(\"\\nAverage is ...\")\n",
-    "    print(sum(score) / len(score))\n",
+    "SCORING = \"roc_auc\"\n",
+    "\n",
+    "def cv_rmsle(model):\n",
+    "    kf = KFold(n_folds, shuffle=True, random_state=42).get_n_splits(train.values)\n",
+    "    rmse= np.sqrt(-cross_val_score(model, train.values, train_y, scoring=\"neg_mean_squared_error\", cv=kf))\n",
+    "    return rmse\n",
     "    \n",
-    "### AUC metric\n",
-    "def auc_score(actual, predictions):\n",
-    "    fpr, tpr, thresholds = roc_curve(actual, predictions, pos_label=2)\n",
-    "    score = auc(fpr, tpr)\n",
-    "    print(score)"
+    "def cv_score(model):\n",
+    "    kf = KFold(n_folds, shuffle=True, random_state=42).get_n_splits(train.values)\n",
+    "    rmse= np.sqrt(-cross_val_score(model, train.values, train_y, scoring=SCORING, cv=kf))\n",
+    "    return rmse"
    ]
   },
   {
@@ -500,27 +498,20 @@
    "outputs": [],
    "source": [
     "# Modeling step Test differents algorithms \n",
-    "classifiers = [\n",
-    "                AdaBoostClassifier(\n",
-    "                    DecisionTreeClassifier(random_state = 17),\n",
-    "                    random_state = 17, learning_rate = 0.1\n",
-    "                ),\n",
-    "                DecisionTreeClassifier(random_state = 17),\n",
-    "                ExtraTreesClassifier(random_state = 17),\n",
-    "                GradientBoostingClassifier(random_state=17),\n",
-    "    \n",
-    "                KNeighborsClassifier(),\n",
-    "                LGBMClassifier(),\n",
-    "                LinearDiscriminantAnalysis(),\n",
-    "                LogisticRegression(random_state = 17),\n",
-    "    \n",
-    "                MLPClassifier(random_state = 17),\n",
-    "                RandomForestClassifier(random_state = 17),\n",
-    "                SVC(random_state=17),\n",
-    "                XGBClassifier()\n",
-    "              ]\n",
+    "models = [\n",
+    "    RandomForestRegressor(),\n",
+    "    GradientBoostingRegressor(),\n",
+    "    ElasticNet(),\n",
+    "    Lasso(),\n",
+    "    SVR(),\n",
+    "    LinearRegression,\n",
+    "    BayesianRidge,\n",
+    "    LassoLarsIC,\n",
+    "    XGBRegressor,\n",
+    "    LGBMRegressor\n",
+    "]\n",
     "\n",
-    "cv_results = [cross_val_score(classifier, train_x, y=train_y, scoring=\"accuracy\", cv=kfold) for classifier in classifiers]\n",
+    "cv_results = [cv_score(model, train_x, train_y, scoring=\"accuracy\") for model in models]\n",
     "\n",
     "cv_means = [cv_result.mean() for cv_result in cv_results]\n",
     "cv_std = [cv_result.std() for cv_result in cv_results]\n",
