started on mussel dataset

--- a/archive/classifier_template.ipynb
+++ b/archive/classifier_template.ipynb
@@ -192,7 +192,11 @@
     "train_x  = train.drop([], axis=1)\n",
     "\n",
     "test_id  = test.\n",
-    "test_x   = test.drop([], axis=1)"
+    "test_x   = test.drop([], axis=1)\n",
+    "\n",
+    "### Combine predictors\n",
+    "full = pd.concat([train_x, test_x])\n",
+    "train_N = len(train_x)"
    ]
   },
   {
@@ -423,6 +427,24 @@
    },
    "outputs": [],
    "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "### Separate into train and test\n",
+    "train_x = full[:train_N]\n",
+    "test_x  = full[train_N:]"
+   ]
   },
   {
    "cell_type": "markdown",
