--- a/archive/regession_template.ipynb
+++ b/archive/regession_template.ipynb
@@ -19,10 +19,11 @@
     "&nbsp;&nbsp;&nbsp;&nbsp; 5.1.) [Unique values](#cat_unique)  \n",
     "&nbsp;&nbsp;&nbsp;&nbsp; 5.2.) [Get dummies](#cat_dummies)  \n",
     "6.) [Numerical columns](#num)  \n",
-    "7.) [Modeling](#model)  \n",
-    "&nbsp;&nbsp;&nbsp;&nbsp; 7.1.) [Machine learning imports](#ml_imports)  \n",
-    "&nbsp;&nbsp;&nbsp;&nbsp; 7.2.) [Many model evaluation](#model_eval)  \n",
-    "8.) [Feature Importance](#feat_importance)  "
+    "7.) [Miscellaneous data processing](#misc)  \n",
+    "8.) [Modeling](#model)  \n",
+    "&nbsp;&nbsp;&nbsp;&nbsp; 8.1.) [Machine learning imports](#ml_imports)  \n",
+    "&nbsp;&nbsp;&nbsp;&nbsp; 8.2.) [Meta modeling](#meta_model)  \n",
+    "9.) [Feature Importance](#feat_importance)  "
    ]
   },
   {
@@ -382,7 +383,9 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "train_y  = train.SalePrice.values\n",
@@ -390,6 +393,10 @@
     "\n",
     "test_id  = test.Id\n",
     "test_x   = test.drop([\"Id\"], axis=1)\n",
+    "\n",
+    "### Combine predictors\n",
+    "full = pd.concat([train_x, test_x])\n",
+    "train_N = len(train_x)\n",
     "\n",
     "# Remove skew\n",
     "train_y  = np.log1p(train_y)"
@@ -978,225 +985,43 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 46,
    "metadata": {},
    "outputs": [
     {
      "data": {
-      "text/html": [
-       "<div>\n",
-       "<style>\n",
-       "    .dataframe thead tr:only-child th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: left;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>MSSubClass</th>\n",
-       "      <th>LotFrontage</th>\n",
-       "      <th>LotArea</th>\n",
-       "      <th>OverallQual</th>\n",
-       "      <th>OverallCond</th>\n",
-       "      <th>YearBuilt</th>\n",
-       "      <th>YearRemodAdd</th>\n",
-       "      <th>MasVnrArea</th>\n",
-       "      <th>BsmtFinSF1</th>\n",
-       "      <th>BsmtFinSF2</th>\n",
-       "      <th>...</th>\n",
-       "      <th>SaleType_ConLw</th>\n",
-       "      <th>SaleType_New</th>\n",
-       "      <th>SaleType_Oth</th>\n",
-       "      <th>SaleType_WD</th>\n",
-       "      <th>SaleCondition_Abnorml</th>\n",
-       "      <th>SaleCondition_AdjLand</th>\n",
-       "      <th>SaleCondition_Alloca</th>\n",
-       "      <th>SaleCondition_Family</th>\n",
-       "      <th>SaleCondition_Normal</th>\n",
-       "      <th>SaleCondition_Partial</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>60</td>\n",
-       "      <td>65.0</td>\n",
-       "      <td>8450</td>\n",
-       "      <td>7</td>\n",
-       "      <td>5</td>\n",
-       "      <td>2003</td>\n",
-       "      <td>2003</td>\n",
-       "      <td>196.0</td>\n",
-       "      <td>706</td>\n",
-       "      <td>0</td>\n",
-       "      <td>...</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>1</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>1</td>\n",
-       "      <td>0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>20</td>\n",
-       "      <td>80.0</td>\n",
-       "      <td>9600</td>\n",
-       "      <td>6</td>\n",
-       "      <td>8</td>\n",
-       "      <td>1976</td>\n",
-       "      <td>1976</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>978</td>\n",
-       "      <td>0</td>\n",
-       "      <td>...</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>1</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>1</td>\n",
-       "      <td>0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>60</td>\n",
-       "      <td>68.0</td>\n",
-       "      <td>11250</td>\n",
-       "      <td>7</td>\n",
-       "      <td>5</td>\n",
-       "      <td>2001</td>\n",
-       "      <td>2002</td>\n",
-       "      <td>162.0</td>\n",
-       "      <td>486</td>\n",
-       "      <td>0</td>\n",
-       "      <td>...</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>1</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>1</td>\n",
-       "      <td>0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>70</td>\n",
-       "      <td>60.0</td>\n",
-       "      <td>9550</td>\n",
-       "      <td>7</td>\n",
-       "      <td>5</td>\n",
-       "      <td>1915</td>\n",
-       "      <td>1970</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>216</td>\n",
-       "      <td>0</td>\n",
-       "      <td>...</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>1</td>\n",
-       "      <td>1</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>60</td>\n",
-       "      <td>84.0</td>\n",
-       "      <td>14260</td>\n",
-       "      <td>8</td>\n",
-       "      <td>5</td>\n",
-       "      <td>2000</td>\n",
-       "      <td>2000</td>\n",
-       "      <td>350.0</td>\n",
-       "      <td>655</td>\n",
-       "      <td>0</td>\n",
-       "      <td>...</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>1</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>1</td>\n",
-       "      <td>0</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "<p>5 rows × 307 columns</p>\n",
-       "</div>"
-      ],
       "text/plain": [
-       "   MSSubClass  LotFrontage  LotArea  OverallQual  OverallCond  YearBuilt  \\\n",
-       "0          60         65.0     8450            7            5       2003   \n",
-       "1          20         80.0     9600            6            8       1976   \n",
-       "2          60         68.0    11250            7            5       2001   \n",
-       "3          70         60.0     9550            7            5       1915   \n",
-       "4          60         84.0    14260            8            5       2000   \n",
-       "\n",
-       "   YearRemodAdd  MasVnrArea  BsmtFinSF1  BsmtFinSF2          ...            \\\n",
-       "0          2003       196.0         706           0          ...             \n",
-       "1          1976         0.0         978           0          ...             \n",
-       "2          2002       162.0         486           0          ...             \n",
-       "3          1970         0.0         216           0          ...             \n",
-       "4          2000       350.0         655           0          ...             \n",
-       "\n",
-       "   SaleType_ConLw  SaleType_New  SaleType_Oth  SaleType_WD  \\\n",
-       "0               0             0             0            1   \n",
-       "1               0             0             0            1   \n",
-       "2               0             0             0            1   \n",
-       "3               0             0             0            1   \n",
-       "4               0             0             0            1   \n",
-       "\n",
-       "   SaleCondition_Abnorml  SaleCondition_AdjLand  SaleCondition_Alloca  \\\n",
-       "0                      0                      0                     0   \n",
-       "1                      0                      0                     0   \n",
-       "2                      0                      0                     0   \n",
-       "3                      1                      0                     0   \n",
-       "4                      0                      0                     0   \n",
-       "\n",
-       "   SaleCondition_Family  SaleCondition_Normal  SaleCondition_Partial  \n",
-       "0                     0                     1                      0  \n",
-       "1                     0                     1                      0  \n",
-       "2                     0                     1                      0  \n",
-       "3                     0                     0                      0  \n",
-       "4                     0                     1                      0  \n",
-       "\n",
-       "[5 rows x 307 columns]"
+       "[]"
       ]
      },
-     "execution_count": 45,
+     "execution_count": 46,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
    "source": [
-    "train_x.head()"
+    "---\n",
+    "<a id=\"misc\"></a>\n",
+    "\n",
+    "# [^](#toc) <u>Miscellaneous data processing</u>"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "### Separate into train and test\n",
+    "train_x = full[:train_N]\n",
+    "test_x  = full[train_N:]"
    ]
   },
   {
@@ -1206,7 +1031,7 @@
     "---\n",
     "<a id=\"model\"></a>\n",
     "\n",
-    "# [^](#toc) Modeling"
+    "# [^](#toc) <u>Modeling</u>"
    ]
   },
   {
@@ -1277,6 +1102,7 @@
    "cell_type": "code",
    "execution_count": 23,
    "metadata": {
+    "collapsed": true,
     "scrolled": true
    },
    "outputs": [],
@@ -1372,7 +1198,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Stacking class"
+    "<a id=\"meta_model\"></a>\n",
+    "\n",
+    "### [^](#toc) Meta modeling"
    ]
   },
   {
@@ -1437,7 +1265,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Creating the stacked model"
+    "### Creating the meta model"
    ]
   },
   {
@@ -1449,28 +1277,7 @@
    "outputs": [],
    "source": [
     "stacked_averaged_models = StackingAveragedModels(base_models = (ENet, GBoost, KRR),\n",
-    "                                                 meta_model = lasso)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 35,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "callings fit\n",
-      "callings fit\n",
-      "callings fit\n",
-      "callings fit\n",
-      "callings fit\n",
-      "Stacking Averaged models score: 0.1261 (0.0182)\n"
-     ]
-    }
-   ],
-   "source": [
+    "                                                 meta_model = lasso)\n",
     "score = cv_rmsle(stacked_averaged_models, train_x.values, train_y)\n",
     "print(\"Stacking Averaged models score: {:.4f} ({:.4f})\".format(score.mean(), score.std()))"
    ]
