added Gaussian naive bayes to classifier template

--- a/archive/classifier_template.ipynb
+++ b/archive/classifier_template.ipynb
@@ -25,16 +25,17 @@
     "&nbsp;&nbsp;&nbsp;&nbsp; 7.3.) [Ada Boost](#ada_model)  \n",
     "&nbsp;&nbsp;&nbsp;&nbsp; 7.4.) [Decision Tree](#dtc_model)  \n",
     "&nbsp;&nbsp;&nbsp;&nbsp; 7.5.) [Extra Trees](#etc_model)  \n",
-    "&nbsp;&nbsp;&nbsp;&nbsp; 7.6.) [Gradient Boost](#gbc_model)  \n",
-    "&nbsp;&nbsp;&nbsp;&nbsp; 7.7.) [K Nearest Neighbors](#knn_model)  \n",
-    "&nbsp;&nbsp;&nbsp;&nbsp; 7.8.) [Light Gradient Boost](#lgb_model)  \n",
-    "&nbsp;&nbsp;&nbsp;&nbsp; 7.9.) [Linear Discriminant Analysis](#lin_model)  \n",
-    "&nbsp;&nbsp;&nbsp;&nbsp; 7.10.) [Logistic](#log_model)  \n",
-    "&nbsp;&nbsp;&nbsp;&nbsp; 7.11.) [Multiple Layer Perceptron](#mlp_model)  \n",
-    "&nbsp;&nbsp;&nbsp;&nbsp; 7.12.) [Random Forest Classifier](#rfc_model)  \n",
-    "&nbsp;&nbsp;&nbsp;&nbsp; 7.13.) [SVC](#svc_model)  \n",
-    "&nbsp;&nbsp;&nbsp;&nbsp; 7.14.) [XGB Classifier](#xgb_model)  \n",
-    "&nbsp;&nbsp;&nbsp;&nbsp; 7.15.) [Voting classifier](#vote)  \n",
+    "&nbsp;&nbsp;&nbsp;&nbsp; 7.6.) [Gaussian Naive Bayes](#gnb_model)  \n",
+    "&nbsp;&nbsp;&nbsp;&nbsp; 7.7.) [Gradient Boost](#gbc_model)  \n",
+    "&nbsp;&nbsp;&nbsp;&nbsp; 7.8.) [K Nearest Neighbors](#knn_model)  \n",
+    "&nbsp;&nbsp;&nbsp;&nbsp; 7.9.) [Light Gradient Boost](#lgb_model)  \n",
+    "&nbsp;&nbsp;&nbsp;&nbsp; 7.10.) [Linear Discriminant Analysis](#lin_model)  \n",
+    "&nbsp;&nbsp;&nbsp;&nbsp; 7.11.) [Logistic](#log_model)  \n",
+    "&nbsp;&nbsp;&nbsp;&nbsp; 7.12.) [Multiple Layer Perceptron](#mlp_model)  \n",
+    "&nbsp;&nbsp;&nbsp;&nbsp; 7.13.) [Random Forest Classifier](#rfc_model)  \n",
+    "&nbsp;&nbsp;&nbsp;&nbsp; 7.14.) [SVC](#svc_model)  \n",
+    "&nbsp;&nbsp;&nbsp;&nbsp; 7.15.) [XGB Classifier](#xgb_model)  \n",
+    "&nbsp;&nbsp;&nbsp;&nbsp; 7.16.) [Voting classifier](#vote)  \n",
     "8.) [Feature Importance](#feat_importance)  "
    ]
   },
@@ -473,19 +474,24 @@
    },
    "outputs": [],
    "source": [
-    "# Massive amounts of model imports\n",
+    "### Massive amounts of model imports\n",
+    "\n",
+    "# Classifiers\n",
     "from sklearn.ensemble import RandomForestClassifier, AdaBoostClassifier, GradientBoostingClassifier, ExtraTreesClassifier, VotingClassifier\n",
     "from sklearn.discriminant_analysis import LinearDiscriminantAnalysis\n",
     "from sklearn.linear_model import LogisticRegression\n",
-    "from sklearn.model_selection import KFold, cross_val_score, GridSearchCV, StratifiedKFold, learning_curve\n",
+    "from sklearn.naive_bayes import GaussianNB\n",
     "from sklearn.neighbors import KNeighborsClassifier\n",
-    "from sklearn.neural_network import MLPClassifier\n",
-    "from sklearn.pipeline import make_pipeline\n",
-    "from sklearn.preprocessing import Imputer\n",
     "from sklearn.svm import SVC\n",
     "from sklearn.tree import DecisionTreeClassifier\n",
     "from xgboost import XGBClassifier\n",
     "from lightgbm import LGBMClassifier\n",
+    "from sklearn.neural_network import MLPClassifier\n",
+    "\n",
+    "# Helpers\n",
+    "from sklearn.model_selection import KFold, cross_val_score, GridSearchCV, StratifiedKFold, learning_curve\n",
+    "from sklearn.pipeline import make_pipeline\n",
+    "from sklearn.preprocessing import Imputer\n",
     "\n",
     "kfold = StratifiedKFold()\n",
     "\n",
@@ -523,16 +529,18 @@
     "                ),\n",
     "                DecisionTreeClassifier(random_state = 17),\n",
     "                ExtraTreesClassifier(random_state = 17),\n",
-    "                GradientBoostingClassifier(random_state=17),\n",
+    "                GaussianNB(random_state = 17),\n",
     "    \n",
+    "                GradientBoostingClassifier(random_state=17),\n",
     "                KNeighborsClassifier(),\n",
     "                LGBMClassifier(),\n",
     "                LinearDiscriminantAnalysis(),\n",
-    "                LogisticRegression(random_state = 17),\n",
     "    \n",
+    "                LogisticRegression(random_state = 17),\n",
     "                MLPClassifier(random_state = 17),\n",
     "                RandomForestClassifier(random_state = 17),\n",
     "                SVC(random_state=17),\n",
+    "    \n",
     "                XGBClassifier()\n",
     "              ]\n",
     "\n",
@@ -548,16 +556,18 @@
     "                            \"AdaBoost\",\n",
     "                            \"DecisionTree\",\n",
     "                            \"ExtraTrees\",\n",
-    "                            \"GradientBoosting\",\n",
+    "                            \"GaussianNaiveBayes\",\n",
     "                            \n",
+    "                            \"GradientBoosting\",\n",
     "                            \"KNeighboors\",\n",
     "                            \"LGBM\",\n",
     "                            \"LinearDiscriminantAnalysis\",\n",
-    "                            \"LogisticRegression\",\n",
     "                            \n",
+    "                            \"LogisticRegression\",\n",
     "                            \"MultipleLayerPerceptron\",\n",
     "                            \"RandomForest\",\n",
     "                            \"SVC\",\n",
+    "                            \n",
     "                            \"XGB\"\n",
     "                        ]})\n",
     "\n",
@@ -656,6 +666,36 @@
     "### Scoring\n",
     "start = time.time()\n",
     "score_model(etc_model)\n",
+    "print(\"\\nScoring took {} seconds\".format(round(time.time() - start)))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<a id=\"gnb_model\"></a>\n",
+    "\n",
+    "### [^](#toc) Gaussian Naive Bayes"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "gnb_model = GaussianNB(random_state=17)\n",
+    "\n",
+    "### Training\n",
+    "start = time.time()\n",
+    "gnb_model.fit(train_x, train_y)\n",
+    "print(\"Training took {} seconds\".format(round(time.time() - start)))\n",
+    "\n",
+    "### Scoring\n",
+    "start = time.time()\n",
+    "score_model(gnb_model)\n",
     "print(\"\\nScoring took {} seconds\".format(round(time.time() - start)))"
    ]
   },
