fixed mistake in classifier template

--- a/archive/classifier_template.ipynb
+++ b/archive/classifier_template.ipynb
@@ -432,7 +432,9 @@
   {
    "cell_type": "markdown",
    "metadata": {},
-   "source": []
+   "source": [
+    "### Separate into train and test"
+   ]
   },
   {
    "cell_type": "code",
@@ -442,7 +444,6 @@
    },
    "outputs": [],
    "source": [
-    "### Separate into train and test\n",
     "train_x = full[:train_N]\n",
     "test_x  = full[train_N:]"
    ]
@@ -529,7 +530,7 @@
     "                ),\n",
     "                DecisionTreeClassifier(random_state = 17),\n",
     "                ExtraTreesClassifier(random_state = 17),\n",
-    "                GaussianNB(random_state = 17),\n",
+    "                GaussianNB(),\n",
     "    \n",
     "                GradientBoostingClassifier(random_state=17),\n",
     "                KNeighborsClassifier(),\n",
@@ -686,7 +687,7 @@
    },
    "outputs": [],
    "source": [
-    "gnb_model = GaussianNB(random_state=17)\n",
+    "gnb_model = GaussianNB()\n",
     "\n",
     "### Training\n",
     "start = time.time()\n",
