added param tuning tips to classifier template

--- a/archive/classifier_template.ipynb
+++ b/archive/classifier_template.ipynb
@@ -766,7 +766,11 @@
    "source": [
     "<a id=\"lgb_model\"></a>\n",
     "\n",
-    "### [^](#toc) Light Gradient Boost"
+    "### [^](#toc) Light Gradient Boost\n",
+    "\n",
+    "[An article](https://www.analyticsvidhya.com/blog/2017/06/which-algorithm-takes-the-crown-light-gbm-vs-xgboost/) explaing Light Gradient Boosting\n",
+    "\n",
+    "[An article](https://www.analyticsvidhya.com/blog/2016/03/complete-guide-parameter-tuning-xgboost-with-codes-python/) giving parameter tuning tips (also helpful for XGB!)"
    ]
   },
   {
@@ -946,7 +950,9 @@
    "source": [
     "<a id=\"xgb_model\"></a>\n",
     "\n",
-    "### [^](#toc) XGB Classifier"
+    "### [^](#toc) XGB Classifier\n",
+    "\n",
+    "[An article](https://www.analyticsvidhya.com/blog/2016/03/complete-guide-parameter-tuning-xgboost-with-codes-python/) giving parameter tuning tips  (also helpful for light gradient boosting!)"
    ]
   },
   {
