added mussel to complete

--- a/in_progress/santander/1_good_beginnings.ipynb
+++ b/in_progress/santander/1_good_beginnings.ipynb
@@ -912,13 +912,49 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "RandomForestRegressor(bootstrap=True, criterion='mse', max_depth=None,\n",
+       "           max_features='auto', max_leaf_nodes=None,\n",
+       "           min_impurity_decrease=0.0, min_impurity_split=None,\n",
+       "           min_samples_leaf=1, min_samples_split=2,\n",
+       "           min_weight_fraction_leaf=0.0, n_estimators=10, n_jobs=1,\n",
+       "           oob_score=False, random_state=None, verbose=0, warm_start=False)"
+      ]
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "RandomForestRegressor"
+    "model = RandomForestRegressor()\n",
+    "model.fit(train_x[:1000], train_y[:1000])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([  1.95189225e-02,   1.61248265e-05,   0.00000000e+00, ...,\n",
+       "         0.00000000e+00,   0.00000000e+00,   1.04807939e-04])"
+      ]
+     },
+     "execution_count": 10,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "model.feature_importances_"
    ]
   },
   {
