added tip for santander

--- a/in_progress/santander/1_good_beginnings.ipynb
+++ b/in_progress/santander/1_good_beginnings.ipynb
@@ -4,6 +4,17 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "### FIXME:\n",
+    "\n",
+    "Replace 0 with np.nan.  It reduces memory and has better performance\n",
+    "\n",
+    "https://www.kaggle.com/asydorchuk/save-98-of-ram"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "<a id=\"toc\"></a>\n",
     "\n",
     "# <u>Table of Contents</u>\n",
@@ -767,6 +778,7 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
+    "collapsed": true,
     "scrolled": true
    },
    "outputs": [],
@@ -869,7 +881,9 @@
   {
    "cell_type": "code",
    "execution_count": 64,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "model = RandomForestRegressor()\n",
@@ -899,6 +913,7 @@
    "cell_type": "code",
    "execution_count": 46,
    "metadata": {
+    "collapsed": true,
     "scrolled": false
    },
    "outputs": [],
@@ -959,7 +974,9 @@
   {
    "cell_type": "code",
    "execution_count": 53,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "svr_model = SVR()\n",
@@ -1056,7 +1073,9 @@
   {
    "cell_type": "code",
    "execution_count": 33,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "# stacked_averaged_models = StackingAveragedModels(base_models = (lgb_model, gbm_model, xgb_model),\n",
@@ -1200,7 +1219,9 @@
   {
    "cell_type": "code",
    "execution_count": 80,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "# stacked_averaged_models.fit(train_x.values, train_y)\n",
