--- a/complete/Forest-Cover/submission.ipynb
+++ b/complete/Forest-Cover/submission.ipynb
@@ -35,7 +35,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -80,7 +80,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 3,
    "metadata": {
     "collapsed": true
    },
@@ -106,7 +106,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 4,
    "metadata": {
     "collapsed": true
    },
@@ -139,7 +139,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 5,
    "metadata": {
     "collapsed": true
    },
@@ -158,7 +158,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 6,
    "metadata": {
     "collapsed": true
    },
@@ -173,31 +173,11 @@
     "from sklearn.svm import SVC\n",
     "\n",
     "from sklearn.neural_network import MLPClassifier\n",
-    "\n",
-    "from sklearn.model_selection import cross_val_score, KFold, train_test_split\n",
+    "from sklearn.model_selection import cross_val_score\n",
     "\n",
     "TAKE_CV = False\n",
     "first_layer_train = pd.DataFrame()\n",
-    "first_layer_val   = pd.DataFrame()\n",
     "first_layer_preds = pd.DataFrame()"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "### Split into train and validation"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 10,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": [
-    "training_x, val_x, training_y, val_y = train_test_split(train_x, train_y, test_size=0.2, random_state=17)"
    ]
   },
   {
@@ -211,7 +191,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 8,
    "metadata": {
     "collapsed": true
    },
@@ -232,8 +212,7 @@
     "\n",
     "etc_model_1.fit(train_x, train_y)\n",
     "\n",
-    "first_layer_train[\"ETC1\"] = etc_model_1.predict(training_x)\n",
-    "first_layer_val[\"ETC1\"]   = etc_model_1.predict(val_x)\n",
+    "first_layer_train[\"ETC1\"] = etc_model_1.predict(train_x)\n",
     "first_layer_preds[\"ETC1\"] = etc_model_1.predict(test_x);"
    ]
   },
@@ -246,7 +225,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {
     "collapsed": true
    },
@@ -267,8 +246,7 @@
     "\n",
     "etc_model_2.fit(train_x, train_y)\n",
     "\n",
-    "first_layer_train[\"ETC2\"] = etc_model_2.predict(training_x)\n",
-    "first_layer_val[\"ETC2\"]   = etc_model_2.predict(val_x)\n",
+    "first_layer_train[\"ETC2\"] = etc_model_2.predict(train_x)\n",
     "first_layer_preds[\"ETC2\"] = etc_model_2.predict(test_x);"
    ]
   },
@@ -281,7 +259,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "metadata": {
     "collapsed": true
    },
@@ -301,8 +279,7 @@
     "\n",
     "xgb_model_1.fit(train_x, train_y)\n",
     "\n",
-    "first_layer_train[\"XGB1\"] = xgb_model_1.predict(training_x)\n",
-    "first_layer_val[\"XGB1\"]   = xgb_model_1.predict(val_x)\n",
+    "first_layer_train[\"XGB1\"] = xgb_model_1.predict(train_x)\n",
     "first_layer_preds[\"XGB1\"] = xgb_model_1.predict(test_x);"
    ]
   },
@@ -317,25 +294,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "KeyboardInterrupt",
-     "evalue": "",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mKeyboardInterrupt\u001b[0m                         Traceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-12-185904b302c3>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[1;32m      7\u001b[0m     \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34mf\"Score is {score_mean} +/- {score_std}\"\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      8\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 9\u001b[0;31m \u001b[0mxgb_model_2\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mfit\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mtrain_x\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mtrain_y\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     10\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     11\u001b[0m \u001b[0mfirst_layer_train\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m\"XGB2\"\u001b[0m\u001b[0;34m]\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mxgb_model_2\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mpredict\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mtraining_x\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;32m/anaconda3/lib/python3.6/site-packages/xgboost-0.7-py3.6.egg/xgboost/sklearn.py\u001b[0m in \u001b[0;36mfit\u001b[0;34m(self, X, y, sample_weight, eval_set, eval_metric, early_stopping_rounds, verbose, xgb_model)\u001b[0m\n\u001b[1;32m    504\u001b[0m                               \u001b[0mearly_stopping_rounds\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mearly_stopping_rounds\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    505\u001b[0m                               \u001b[0mevals_result\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mevals_result\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mobj\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mobj\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mfeval\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mfeval\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m--> 506\u001b[0;31m                               verbose_eval=verbose, xgb_model=None)\n\u001b[0m\u001b[1;32m    507\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    508\u001b[0m         \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mobjective\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mxgb_options\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m\"objective\"\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;32m/anaconda3/lib/python3.6/site-packages/xgboost-0.7-py3.6.egg/xgboost/training.py\u001b[0m in \u001b[0;36mtrain\u001b[0;34m(params, dtrain, num_boost_round, evals, obj, feval, maximize, early_stopping_rounds, evals_result, verbose_eval, xgb_model, callbacks, learning_rates)\u001b[0m\n\u001b[1;32m    202\u001b[0m                            \u001b[0mevals\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mevals\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    203\u001b[0m                            \u001b[0mobj\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mobj\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mfeval\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mfeval\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m--> 204\u001b[0;31m                            xgb_model=xgb_model, callbacks=callbacks)\n\u001b[0m\u001b[1;32m    205\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    206\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;32m/anaconda3/lib/python3.6/site-packages/xgboost-0.7-py3.6.egg/xgboost/training.py\u001b[0m in \u001b[0;36m_train_internal\u001b[0;34m(params, dtrain, num_boost_round, evals, obj, feval, xgb_model, callbacks)\u001b[0m\n\u001b[1;32m     72\u001b[0m         \u001b[0;31m# Skip the first update if it is a recovery step.\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     73\u001b[0m         \u001b[0;32mif\u001b[0m \u001b[0mversion\u001b[0m \u001b[0;34m%\u001b[0m \u001b[0;36m2\u001b[0m \u001b[0;34m==\u001b[0m \u001b[0;36m0\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 74\u001b[0;31m             \u001b[0mbst\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mupdate\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mdtrain\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mi\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mobj\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     75\u001b[0m             \u001b[0mbst\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0msave_rabit_checkpoint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     76\u001b[0m             \u001b[0mversion\u001b[0m \u001b[0;34m+=\u001b[0m \u001b[0;36m1\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;32m/anaconda3/lib/python3.6/site-packages/xgboost-0.7-py3.6.egg/xgboost/core.py\u001b[0m in \u001b[0;36mupdate\u001b[0;34m(self, dtrain, iteration, fobj)\u001b[0m\n\u001b[1;32m    893\u001b[0m         \u001b[0;32mif\u001b[0m \u001b[0mfobj\u001b[0m \u001b[0;32mis\u001b[0m \u001b[0;32mNone\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    894\u001b[0m             _check_call(_LIB.XGBoosterUpdateOneIter(self.handle, ctypes.c_int(iteration),\n\u001b[0;32m--> 895\u001b[0;31m                                                     dtrain.handle))\n\u001b[0m\u001b[1;32m    896\u001b[0m         \u001b[0;32melse\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    897\u001b[0m             \u001b[0mpred\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mpredict\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mdtrain\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;31mKeyboardInterrupt\u001b[0m: "
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "xgb_model_2 = XGBClassifier(max_depth=20, n_estimators=1000, random_state=71)\n",
     "\n",
@@ -347,8 +308,7 @@
     "\n",
     "xgb_model_2.fit(train_x, train_y)\n",
     "\n",
-    "first_layer_train[\"XGB2\"] = xgb_model_2.predict(training_x)\n",
-    "first_layer_val[\"XGB2\"]   = xgb_model_2.predict(val_x)\n",
+    "first_layer_train[\"XGB2\"] = xgb_model_2.predict(train_x)\n",
     "first_layer_preds[\"XGB2\"] = xgb_model_2.predict(test_x);"
    ]
   },
@@ -382,8 +342,7 @@
     "\n",
     "rfc_model.fit(train_x, train_y)\n",
     "\n",
-    "first_layer_train[\"RFC\"] = rfc_model.predict(training_x)\n",
-    "first_layer_val[\"RFC\"]   = rfc_model.predict(val_x)\n",
+    "first_layer_train[\"RFC\"] = rfc_model.predict(train_x)\n",
     "first_layer_preds[\"RFC\"] = rfc_model.predict(test_x);"
    ]
   },
@@ -418,8 +377,7 @@
     "\n",
     "lgb_model_1.fit(train_x, train_y)\n",
     "\n",
-    "first_layer_train[\"LGB1\"] = lgb_model_1.predict(training_x)\n",
-    "first_layer_val[\"LGB1\"]   = lgb_model_1.predict(val_x)\n",
+    "first_layer_train[\"LGB1\"] = lgb_model_1.predict(train_x)\n",
     "first_layer_preds[\"LGB1\"] = lgb_model_1.predict(test_x);"
    ]
   },
@@ -454,8 +412,7 @@
     "\n",
     "lgb_model_2.fit(train_x, train_y)\n",
     "\n",
-    "first_layer_train[\"LGB2\"] = lgb_model_2.predict(training_x)\n",
-    "first_layer_val[\"LGB2\"]   = lgb_model_2.predict(val_x)\n",
+    "first_layer_train[\"LGB2\"] = lgb_model_2.predict(train_x)\n",
     "first_layer_preds[\"LGB2\"] = lgb_model_2.predict(test_x);"
    ]
   },
@@ -486,8 +443,7 @@
     "\n",
     "lgb_model_3.fit(train_x, train_y)\n",
     "\n",
-    "first_layer_train[\"LGB3\"] = lgb_model_3.predict(training_x)\n",
-    "first_layer_val[\"LGB3\"]   = lgb_model_3.predict(val_x)\n",
+    "first_layer_train[\"LGB3\"] = lgb_model_3.predict(train_x)\n",
     "first_layer_preds[\"LGB3\"] = lgb_model_3.predict(test_x);"
    ]
   },
@@ -521,8 +477,7 @@
     "\n",
     "ada_model_1.fit(train_x, train_y)\n",
     "\n",
-    "first_layer_train[\"ADA1\"] = ada_model_1.predict(training_x)\n",
-    "first_layer_val[\"ADA1\"]   = ada_model_1.predict(val_x)\n",
+    "first_layer_train[\"ADA1\"] = ada_model_1.predict(train_x)\n",
     "first_layer_preds[\"ADA1\"] = ada_model_1.predict(test_x);"
    ]
   },
@@ -556,8 +511,7 @@
     "\n",
     "ada_model_2.fit(train_x, train_y)\n",
     "\n",
-    "first_layer_train[\"ADA2\"] = ada_model_2.predict(training_x)\n",
-    "first_layer_val[\"ADA2\"]   = ada_model_2.predict(val_x)\n",
+    "first_layer_train[\"ADA2\"] = ada_model_2.predict(train_x)\n",
     "first_layer_preds[\"ADA2\"] = ada_model_2.predict(test_x);"
    ]
   },
@@ -579,14 +533,12 @@
     "voting_model = SVC()\n",
     "\n",
     "if TAKE_CV:\n",
-    "    t_x = pd.concat([first_layer_train, first_layer_val])\n",
-    "    t_y = pd.concat([training_y, val_y])\n",
-    "    scores = cross_val_score(voting_model, t_x, t_y, cv=5, verbose=1)\n",
+    "    scores = cross_val_score(voting_model, first_layer_train, train_y, cv=5, verbose=1)\n",
     "    score_mean = round(np.mean(scores), 4)\n",
     "    score_std  = round(np.std(scores), 3)\n",
     "    print(f\"Score is {score_mean} +/- {score_std}\")\n",
     "    \n",
-    "voting_model.fit(first_layer_train, training_y)\n",
+    "voting_model.fit(first_layer_train, train_y)\n",
     "predictions = voting_model.predict(first_layer_preds)"
    ]
   },
